--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
             "description": "LanguageTool",
             "url": "index.html",
 
-            "icons": [
+            "icons": [ "resources/light/icon.png", "resources/light/icon@2x.png" ],
+            "icons2": [
 				{
 					"style" : "light",
 					
